@@ -1,37 +1,26 @@
-/* 
+/*
    +----------------------------------------------------------------------+
-   | PHP HTML Embedded Scripting Language Version 3.0                     |
+   | PHP version 4.0                                                      |
    +----------------------------------------------------------------------+
-   | Copyright (c) 1997,1998 PHP Development Team (See Credits file)      |
+   | Copyright (c) 1997, 1998, 1999 The PHP Group                         |
    +----------------------------------------------------------------------+
-   | This program is free software; you can redistribute it and/or modify |
-   | it under the terms of one of the following licenses:                 |
-   |                                                                      |
-   |  A) the GNU General Public License as published by the Free Software |
-   |     Foundation; either version 2 of the License, or (at your option) |
-   |     any later version.                                               |
-   |                                                                      |
-   |  B) the PHP License as published by the PHP Development Team and     |
-   |     included in the distribution in the file: LICENSE                |
-   |                                                                      |
-   | This program is distributed in the hope that it will be useful,      |
-   | but WITHOUT ANY WARRANTY; without even the implied warranty of       |
-   | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        |
-   | GNU General Public License for more details.                         |
-   |                                                                      |
-   | You should have received a copy of both licenses referred to here.   |
-   | If you did not, or have any questions about PHP licensing, please    |
-   | contact core@php.net.                                                |
+   | This source file is subject to version 2.0 of the PHP license,       |
+   | that is bundled with this package in the file LICENSE, and is        |
+   | available at through the world-wide-web at                           |
+   | http://www.php.net/license/2_0.txt.                                  |
+   | If you did not receive a copy of the PHP license and are unable to   |
+   | obtain it through the world-wide-web, please send a note to          |
+   | license@php.net so we can mail you a copy immediately.               |
    +----------------------------------------------------------------------+
    | Authors: Zeev Suraski <zeev@zend.com>                                |
    +----------------------------------------------------------------------+
- */
+*/
 
 
-/* $Id: php3_mysql.h,v 1.8 1999/08/02 16:06:11 andrey Exp $ */
+/* $Id: php_mysql.h,v 1.1 1999/09/03 19:54:12 zeev Exp $ */
 
-#ifndef _PHP3_MYSQL_H
-#define _PHP3_MYSQL_H
+#ifndef _PHP_MYSQL_H
+#define _PHP_MYSQL_H
 
 #if COMPILE_DL
 #undef HAVE_MYSQL
@@ -53,7 +42,8 @@
 #include "TSRM.h"
 #endif
 
-extern php3_module_entry mysql_module_entry;
+extern zend_module_entry mysql_module_entry;
+
 #define mysql_module_ptr &mysql_module_entry
 
 extern PHP_MINIT_FUNCTION(mysql);
@@ -129,4 +119,4 @@ extern PHP_MYSQL_API php_mysql_globals mysql_globals;
 
 #define phpext_mysql_ptr mysql_module_ptr
 
-#endif /* _PHP3_MYSQL_H */
+#endif /* _PHP_MYSQL_H */
